fix: spacing

--- a/client/src/components/ProcessLogs/index.css
+++ b/client/src/components/ProcessLogs/index.css
@@ -35,7 +35,6 @@
 }
 
 .process-logs-item {
-	padding: 4px;
 	padding-left: 8px;
 	color: whitesmoke;
 	white-space: pre-wrap;
